--- a/core_navigation_impl/build.gradle
+++ b/core_navigation_impl/build.gradle
@@ -1,53 +1,48 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
+
+
     defaultConfig {
-        applicationId "com.playground.serviceshop"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
-    implementation project(':core_network_api')
-    implementation project(':core_network_impl')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation project(':core_utils')
     implementation project(':core_navigation_api')
-    implementation project(':core_navigation_impl')
     implementation project(':feature_showcase_mvp_api')
     implementation project(':feature_showcase_mvp_impl')
     implementation project(':feature_purchase_api')
     implementation project(':feature_purchase_impl')
 
     def commonDependencies = rootProject.ext.commonDependencies
-    def presentationDependencies = rootProject.ext.presentationDependencies
 
     implementation commonDependencies.kotlinStdLib
 
     implementation commonDependencies.dagger
     kapt commonDependencies.daggerCompiler
 
-    implementation presentationDependencies.moxy
-    implementation (presentationDependencies.moxyAndroidXAlt) {
-        exclude group: 'tech.schoolhelper', module: 'moxy-x'
-    }
-    kapt presentationDependencies.moxyCompiler
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
