--- a/feature_showcase_mvp_impl/src/main/AndroidManifest.xml
+++ b/feature_showcase_mvp_impl/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.playground.featureshowcase">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application>
-        <activity android:name=".presentation.ShowCaseActivity">
+        <activity
+            android:name=".presentation.ShowCaseActivity"
+            android:theme="@style/ShowCaseTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
