--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,14 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.jlleitschuh.gradle.ktlint" version "6.1.0"
+}
+
+subprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint" // Version should be inherited from parent
+}
+
 allprojects {
     repositories {
         google()
