--- a/core_navigation_impl/src/main/AndroidManifest.xml
+++ b/core_navigation_impl/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.playground.core_navigation_impl"/>
+          package="com.playground.corenavigationimpl"/>
