--- a/feature_purchase_api/src/main/AndroidManifest.xml
+++ b/feature_purchase_api/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.playground.feature_purchase_api" />
+    package="com.playground.featurepurchaseapi" />
